style(sidebar): 💄 fixed mask z-index

--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -259,7 +259,7 @@
   backdrop-filter: blur(0.8rem);
   background-color: rgba(0, 0, 0, 0.2);
 
-  z-index: 9998;
+  z-index: 998;
   position: absolute;
 }
 
